fix: review and double scroll on safari

--- a/packages/components/src/SidePanel/SidePanel.scss
+++ b/packages/components/src/SidePanel/SidePanel.scss
@@ -25,6 +25,7 @@ $toggle-button-padding: $padding-small;
 	flex-direction: column;
 	overflow-x: hidden;
 	background: $list-item-reverse-color;
+	overflow: hidden;
 
 	&,
 	> ul {
@@ -33,7 +34,8 @@ $toggle-button-padding: $padding-small;
 	}
 
 	.action-list-container {
-		height: 100%;
+		flex: 1;
+		height: calc(100% - 7rem); // specific to Safari
 
 		.tc-side-panel-list {
 			:global .tc-action-list-item {
@@ -60,6 +62,7 @@ $toggle-button-padding: $padding-small;
 		padding-bottom: 0;
 		padding-left: $toggle-button-padding;
 		text-align: left;
+		flex: 0 0 7rem;
 
 		:global {
 			.btn.btn-link {
